# cpp-readline

./: CMakeLists.txt  README.md
cmake/: cpp-readline-config.cmake.in
cmake/modules/: FindReadline.cmake
example/: CMakeLists.txt  main.cpp
